@@ -22,6 +22,8 @@ TODO_FILTERS+=ANSI
 TODO_FILTERS+=BYTE
 TODO_FILTERS+=CJK
 TODO_FILTERS+=CNS11643
+TODO_FILTERS+=HIRAGANA
+TODO_FILTERS+=KATAKANA
 TODO_FILTERS+=UNICODE
 
 TODO_CODECS_BASIC=
